--- a/Christmas exam/MainWindow.xaml
+++ b/Christmas exam/MainWindow.xaml
@@ -5,17 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Christmas_exam"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
-        <ListBox HorizontalAlignment="Left" Height="264" Margin="53,110,0,0" VerticalAlignment="Top" Width="225"/>
+        <ListBox x:Name="lbxPlayers" HorizontalAlignment="Left" Height="264" Margin="53,110,0,0" VerticalAlignment="Top" Width="225"/>
         <ListBox HorizontalAlignment="Left" Height="264" Margin="525,110,0,0" VerticalAlignment="Top" Width="217"/>
         <Button Content="Add&gt;&gt;" HorizontalAlignment="Left" Margin="381,158,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="&lt;&lt;Remove" HorizontalAlignment="Left" Margin="381,236,0,0" VerticalAlignment="Top" Width="75"/>
         <ComboBox HorizontalAlignment="Left" Margin="194,23,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="108,23,0,0" VerticalAlignment="Top" Height="22"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="75,77,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="547,77,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="525,383,0,0" VerticalAlignment="Top"/>
+        <Label Content="Formation" HorizontalAlignment="Left" Margin="108,23,0,0" VerticalAlignment="Top" Height="49"/>
+        <Label Content="All Players" HorizontalAlignment="Left" Margin="75,77,0,0" VerticalAlignment="Top"/>
+        <Label Content="Selected Players" HorizontalAlignment="Left" Margin="547,77,0,0" VerticalAlignment="Top"/>
+        <Label Content="Spaces" HorizontalAlignment="Left" Margin="525,383,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="txtblkSpace" HorizontalAlignment="Left" Margin="593,388,0,0" TextWrapping="Wrap" Text="11" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
