--- a/Christmas exam/MainWindow.xaml
+++ b/Christmas exam/MainWindow.xaml
@@ -8,10 +8,10 @@
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
         <ListBox x:Name="lbxPlayers" HorizontalAlignment="Left" Height="264" Margin="53,110,0,0" VerticalAlignment="Top" Width="225"/>
-        <ListBox HorizontalAlignment="Left" Height="264" Margin="525,110,0,0" VerticalAlignment="Top" Width="217"/>
-        <Button Content="Add&gt;&gt;" HorizontalAlignment="Left" Margin="381,158,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="&lt;&lt;Remove" HorizontalAlignment="Left" Margin="381,236,0,0" VerticalAlignment="Top" Width="75"/>
-        <ComboBox HorizontalAlignment="Left" Margin="194,23,0,0" VerticalAlignment="Top" Width="120"/>
+        <ListBox x:Name="lbxSelect" HorizontalAlignment="Left" Height="264" Margin="525,110,0,0" VerticalAlignment="Top" Width="217"/>
+        <Button x:Name="btnAdd" Content="Add&gt;&gt;" HorizontalAlignment="Left" Margin="381,158,0,0" VerticalAlignment="Top" Width="75" Click="BtnAdd_Click"/>
+        <Button x:Name="btnRemove" Content="&lt;&lt;Remove" HorizontalAlignment="Left" Margin="381,236,0,0" VerticalAlignment="Top" Width="75" Click="BtnRemove_Click"/>
+        <ComboBox x:Name="cbxFormation" HorizontalAlignment="Left" Margin="194,23,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Formation" HorizontalAlignment="Left" Margin="108,23,0,0" VerticalAlignment="Top" Height="49"/>
         <Label Content="All Players" HorizontalAlignment="Left" Margin="75,77,0,0" VerticalAlignment="Top"/>
         <Label Content="Selected Players" HorizontalAlignment="Left" Margin="547,77,0,0" VerticalAlignment="Top"/>
